--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo1",
+  "name": "pie3D",
   "themeColor": "#4DBA87",
   "msTileColor": "#000000",
   "appleMobileWebAppCapable": "yes",
